text overflow fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -330,8 +330,11 @@ strong {
 
 .sub-text {
   width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   height: 100%;
-  padding: 3px 0 3px 0;
+  padding: 3px 0 3px 10px;
   background-color: #240029;
   font-weight: bold;
   font-size: 18px;
@@ -569,7 +572,7 @@ footer {
   .sub-text {
     width: 100%;
     height: 100%;
-    padding: 3px 0 3px 0;
+    padding: 3px 0 3px 10px;
     background-color: #240029;
     font-size: 14px;
     font-weight: normal;
